# game_of_life

./: CMakeLists.txt  README.md
include/: board.h  cell.h
res/: init_board.txt
src/: board.c  main.c
